# spw-router

./: .gitignore  README.md
fw/: Cargo.toml
fw/src/: flash.rs  main.rs
hw/board/: #auto_saved_files#  PDN.kicad_sch  SPW-template.kicad_sch  SpW.kicad_sch  SpW_translate.kicad_sch  board.kicad_pcb  board.kicad_pro  board.kicad_sch  fp-lib-table  stm32.kicad_sch  sym-lib-table
hw/board/bom/: ibom.html
hw/models/: DE9.kicad_sym  EasyEDA.kicad_sym  Snapeda.dcm  Snapeda.kicad_sym
hw/models/DE9.pretty/: DE9_Pins.kicad_mod
hw/models/EasyEDA.3dshapes/: DC-IN-TH_DC-044A-20A.step  SOIC-8_L5.3-W5.3-P1.27-LS7.9-BL.step  SOIC-8_L5.3-W5.3-P1.27-LS7.9-BL.wrl
hw/models/EasyEDA.pretty/: DC-IN-TH_DC-044A-20A.kicad_mod  IND-SMD_L11.6-W10.1.kicad_mod  SOIC-8_L5.3-W5.3-P1.27-LS7.9-BL.kicad_mod
hw/models/Snapeda.3dshapes/: FTFTG256_ARTIX-7__AMD.step  MT40A512M16LY-075_E.step
hw/models/Snapeda.pretty/: BGA96C80P6X16_1350X750X110.kicad_mod  FT_FTG256ARTIX-7_AMD.kicad_mod  SOIC127P599X175-8N.kicad_mod
rtl/: CMakeLists.txt  Makefile  verible.filelist  veridian.yml
rtl/sim/: main.cpp
rtl/sim/verilog/selectio/: IBUFDS.cpp  IBUFDS.v  ISERDESE2.v  OBUFDS.v  OSERDESE2.v
rtl/src/: channel.v  port.v  port_rx.v  port_tx.v  top.sv  top.v  xc7.xdc
